--- a/pa6.html
+++ b/pa6.html
@@ -182,6 +182,7 @@
   </script>
   </head>
   <body onload="setup()">
+    <!-- SVG convas which contains a rectangular boarder and 32 circles to represent LEDs -->
     <svg width="800" height="400" boarder="1">
       <rect id="stage" x="0" y="0" width="800" height="400" stroke="black" stroke-width="1" fill-opacity="0.0"/>
         <circle class="led" id="led1" cx="50" cy="50" r="40" stroke="black" stroke-width="1" fill="white"/>
